# verify-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  log4rs.yml  setup.md
.github/workflows/: docker-image.yml
src/: commands.rs  main.rs
src/commands/: api.rs
