[package]
name = "verify-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.38.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "collector"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
once_cell = "1.13"
futures = "0.3.23"
anyhow = "1.0"
thiserror = "1.0"
log4rs = "1.1"
log = "0.4.17"
serde_yaml = "0.9.9"
